package interfaces;

public interface GuiFactory {

    GuiFrame createCalculatorFrame();

}
