package interfaces;

public interface GuiFrame {
    void displayResult(double value);
    void setController(CalculatorController controller);
    void showFrame();
}
